--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,27 +1,14 @@
-# ============================================================================
-# Ardha Frontend Environment Variables
-# ============================================================================
-# Copy this file to .env.local and fill in your values
-
 # API Configuration
 NEXT_PUBLIC_API_URL=http://localhost:8000
 NEXT_PUBLIC_WS_URL=ws://localhost:8000
 
 # OAuth Configuration
-# Get these from backend/.env (GITHUB_CLIENT_ID and GOOGLE_CLIENT_ID)
+# GitHub OAuth App - Get credentials from: https://github.com/settings/developers
 NEXT_PUBLIC_GITHUB_CLIENT_ID=your_github_client_id_here
-NEXT_PUBLIC_GOOGLE_CLIENT_ID=your_google_client_id.apps.googleusercontent.com
 
-# Feature Flags
-NEXT_PUBLIC_ENABLE_NOTIFICATIONS=true
-NEXT_PUBLIC_ENABLE_WEBSOCKET=true
-NEXT_PUBLIC_ENABLE_AI_CHAT=true
-NEXT_PUBLIC_ENABLE_GIT=true
-NEXT_PUBLIC_ENABLE_DATABASES=true
+# Google OAuth 2.0 - Get credentials from: https://console.cloud.google.com/apis/credentials
+NEXT_PUBLIC_GOOGLE_CLIENT_ID=your_google_client_id_here
 
-# Optional: Analytics
-# NEXT_PUBLIC_GA_ID=G-XXXXXXXXXX
-# NEXT_PUBLIC_SENTRY_DSN=https://xxx@sentry.io/xxx
-
-# Optional: Debug Mode
-# NEXT_PUBLIC_DEBUG=false
+# App Configuration
+NEXT_PUBLIC_APP_NAME=Ardha
+NEXT_PUBLIC_APP_URL=http://localhost:3000
